libs/wingc/src/lsp/snapshots/rename_request/rename_class.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 1
          character: 6
        end:
          line: 1
          character: 10
      newText: t1
    - range:
        start:
          line: 6
          character: 20
        end:
          line: 6
          character: 24
      newText: t1
    - range:
        start:
          line: 11
          character: 12
        end:
          line: 11
          character: 16
      newText: t1

