libs/wingc/src/lsp/snapshots/rename_request/rename_class_inflight_method_from_usage.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 7
          character: 15
        end:
          line: 7
          character: 19
      newText: t1
    - range:
        start:
          line: 22
          character: 4
        end:
          line: 22
          character: 8
      newText: t1
    - range:
        start:
          line: 24
          character: 4
        end:
          line: 24
          character: 8
      newText: t1

