libs/wingc/src/lsp/snapshots/rename_request/rename_class_preflight_method_from_usage.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 8
          character: 6
        end:
          line: 8
          character: 11
      newText: t1
    - range:
        start:
          line: 17
          character: 2
        end:
          line: 17
          character: 7
      newText: t1
    - range:
        start:
          line: 19
          character: 2
        end:
          line: 19
          character: 7
      newText: t1

