libs/wingc/src/lsp/snapshots/rename_request/rename_class_property.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 2
          character: 6
        end:
          line: 2
          character: 10
      newText: t1
    - range:
        start:
          line: 5
          character: 9
        end:
          line: 5
          character: 13
      newText: t1
    - range:
        start:
          line: 11
          character: 15
        end:
          line: 11
          character: 19
      newText: t1
    - range:
        start:
          line: 21
          character: 6
        end:
          line: 21
          character: 10
      newText: t1

