libs/wingc/src/lsp/snapshots/rename_request/rename_closure.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 1
          character: 4
        end:
          line: 1
          character: 7
      newText: t1
    - range:
        start:
          line: 7
          character: 9
        end:
          line: 7
          character: 12
      newText: t1
    - range:
        start:
          line: 9
          character: 9
        end:
          line: 9
          character: 12
      newText: t1
    - range:
        start:
          line: 9
          character: 20
        end:
          line: 9
          character: 23
      newText: t1
    - range:
        start:
          line: 9
          character: 25
        end:
          line: 9
          character: 28
      newText: t1

