libs/wingc/src/lsp/snapshots/rename_request/rename_for_iterator.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 4
          character: 8
        end:
          line: 4
          character: 14
      newText: t1
    - range:
        start:
          line: 6
          character: 6
        end:
          line: 6
          character: 12
      newText: t1
    - range:
        start:
          line: 8
          character: 10
        end:
          line: 8
          character: 16
      newText: t1

