libs/wingc/src/lsp/snapshots/rename_request/rename_inner_scope_shadowing.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 7
          character: 10
        end:
          line: 7
          character: 15
      newText: t1
    - range:
        start:
          line: 9
          character: 10
        end:
          line: 9
          character: 15
      newText: t1

