libs/wingc/src/lsp/snapshots/rename_request/rename_interface_name.snap
---
source: libs/wingc/src/lsp/rename_request.rs
---
changes:
  "file:///main.w":
    - range:
        start:
          line: 1
          character: 14
        end:
          line: 1
          character: 18
      newText: t1
    - range:
        start:
          line: 6
          character: 19
        end:
          line: 6
          character: 23
      newText: t1

